src/test/resources/tests/typeError/invalidFunctionType.qg

init true

run {
    runIt(::pow)
}

input (a,b) true

fun runIt(toRun: fun(number,bool) -> number): number {
    return toRun(1, false)
}